Change font to JetBrains Mono
Update about page to reflect that
Add a link in index page to comment section for posts

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,36 @@
 
 @tailwind utilities;
 
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/web/eot/JetBrainsMono-Regular.eot')
+      format('embedded-opentype'),
+    url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/web/woff2/JetBrainsMono-Regular.woff2')
+      format('woff2'),
+    url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/web/woff/JetBrainsMono-Regular.woff')
+      format('woff'),
+    url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/ttf/JetBrainsMono-Regular.ttf')
+      format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+* {
+  -webkit-font-feature-settings: 'liga' on, 'calt' on;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  font-family: 'JetBrains Mono';
+}
+
+.link-blue {
+  @apply text-blue-600;
+  @apply font-semibold;
+}
+
+.link-blue:hover {
+  @apply underline;
+}
+
 /* Additional vertical padding used by kbd tag. */
 .py-05 {
   padding-top: 0.125rem;
