--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,6 +18,20 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/web/eot/JetBrainsMono-Bold.eot')
+      format('embedded-opentype'),
+    url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/web/woff2/JetBrainsMono-Bold.woff2')
+      format('woff2'),
+    url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/web/woff/JetBrainsMono-Bold.woff')
+      format('woff'),
+    url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/ttf/JetBrainsMono-Bold.ttf')
+      format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
 * {
   -webkit-font-feature-settings: 'liga' on, 'calt' on;
   -webkit-font-smoothing: antialiased;
@@ -42,7 +56,7 @@
 
 .markdown {
   @apply text-gray-900;
-  @apply leading-relaxed;
+  @apply leading-loose;
   @apply break-words;
 }
 
@@ -52,12 +66,12 @@
 
 .markdown > p:first-child {
   @apply mt-0;
-  @apply mb-4;
+  @apply mb-8;
 }
 
 .markdown > * + * {
   @apply mt-0;
-  @apply mb-4;
+  @apply mb-8;
 }
 
 .markdown li + li {
@@ -89,7 +103,7 @@
   @apply leading-tight;
   @apply text-4xl;
   @apply font-semibold;
-  @apply mb-4;
+  @apply mb-8;
   @apply mt-6;
   @apply px-4;
 }
@@ -98,7 +112,7 @@
   @apply leading-tight;
   @apply text-2xl;
   @apply font-semibold;
-  @apply mb-4;
+  @apply mb-8;
   @apply mt-6;
   @apply px-4;
 }
@@ -107,7 +121,7 @@
   @apply leading-snug;
   @apply text-lg;
   @apply font-semibold;
-  @apply mb-4;
+  @apply mb-8;
   @apply mt-6;
   @apply px-4;
 }
@@ -116,7 +130,7 @@
   @apply leading-none;
   @apply text-base;
   @apply font-semibold;
-  @apply mb-4;
+  @apply mb-8;
   @apply mt-6;
   @apply px-4;
 }
@@ -125,7 +139,7 @@
   @apply leading-tight;
   @apply text-sm;
   @apply font-semibold;
-  @apply mb-4;
+  @apply mb-8;
   @apply mt-6;
   @apply px-4;
 }
@@ -135,7 +149,7 @@
   @apply text-sm;
   @apply font-semibold;
   @apply text-gray-600;
-  @apply mb-4;
+  @apply mb-8;
   @apply mt-6;
   @apply px-4;
 }
