--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -70,12 +70,12 @@
 
 .markdown > p:first-child {
   @apply mt-0;
-  @apply mb-8;
+  @apply mb-4;
 }
 
 .markdown > * + * {
   @apply mt-0;
-  @apply mb-8;
+  @apply mb-4;
 }
 
 .markdown li + li {
@@ -107,7 +107,7 @@
   @apply leading-tight;
   @apply text-4xl;
   @apply font-semibold;
-  @apply mb-8;
+  @apply mb-4;
   @apply mt-6;
   @apply px-4;
 }
@@ -116,7 +116,7 @@
   @apply leading-tight;
   @apply text-2xl;
   @apply font-semibold;
-  @apply mb-8;
+  @apply mb-4;
   @apply mt-6;
   @apply px-4;
 }
@@ -125,7 +125,7 @@
   @apply leading-snug;
   @apply text-lg;
   @apply font-semibold;
-  @apply mb-8;
+  @apply mb-4;
   @apply mt-6;
   @apply px-4;
 }
@@ -134,7 +134,7 @@
   @apply leading-none;
   @apply text-base;
   @apply font-semibold;
-  @apply mb-8;
+  @apply mb-4;
   @apply mt-6;
   @apply px-4;
 }
@@ -143,7 +143,7 @@
   @apply leading-tight;
   @apply text-sm;
   @apply font-semibold;
-  @apply mb-8;
+  @apply mb-4;
   @apply mt-6;
   @apply px-4;
 }
@@ -153,20 +153,20 @@
   @apply text-sm;
   @apply font-semibold;
   @apply text-gray-600;
-  @apply mb-8;
+  @apply mb-4;
   @apply mt-6;
   @apply px-4;
 }
 
 .markdown ul {
-  @apply text-base;
+  @apply text-lg;
   @apply pl-12;
   @apply pr-4;
   @apply list-disc;
 }
 
 .markdown ol {
-  @apply text-base;
+  @apply text-lg;
   @apply pl-12;
   @apply pr-4;
   @apply list-decimal;
@@ -186,7 +186,7 @@
 }
 
 .markdown table {
-  @apply text-base;
+  @apply text-lg;
   @apply border-gray-600;
 }
 
